@@ -13,13 +13,14 @@ import net.minecraft.commands.CommandBuildContext;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.Commands;
 import net.minecraft.network.chat.Component;
+import net.minecraft.server.permissions.Permissions;
 
 import java.util.List;
 
 public class ArcCommand {
 
     public static void registerCommand(CommandDispatcher<CommandSourceStack> dispatcher, CommandBuildContext registry, Commands.CommandSelection selection) {
-        dispatcher.register(Commands.literal("arc").requires(source -> source.hasPermission(2))
+        dispatcher.register(Commands.literal("arc").requires(source -> source.permissions().hasPermission(Permissions.COMMANDS_GAMEMASTER))
                 .then(Commands.literal("screen")
                         .then(Commands.literal("action")
                                 .then(Commands.argument("action", ActionArgument.action())
@@ -34,7 +35,7 @@ public class ArcCommand {
                                         context.getSource().sendFailure(Component.literal("No actions found"));
                                         return 1;
                                     } else {
-                                        return openActionScreen(context.getSource(), actions.get(0));
+                                        return openActionScreen(context.getSource(), actions.getFirst());
                                     }
                                 }))
                         .then(Commands.literal("holders")
